Legg til eksternt api for å hente alle brev for en liste av saker
